fix align 3.3

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     display: flex;
     justify-content: center;
     margin-bottom: 80px;
-    background-color: #051348;
+    background-color: #2440c138;
     width: 100%;
 }
 h1 {
